# Unity

./: .gitignore  LICENSE  PLAN.md  README.md  RELEASES.md  start-backend.bat
docs/: AI_MODELS.md
electron-app/: .env.development  .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
electron-app/electron/: main.ts
electron-app/src/: App.vue  env.d.ts  main.ts
electron-app/src-tauri/: Cargo.toml  tauri.conf.json
electron-app/src-tauri/icons/: icon.icns
electron-app/src/api/: client.ts  novel.ts
electron-app/src/components/: AnalysisProgress.vue  FileUploader.vue  PeInfoPanel.vue  VtableResult.vue
electron-app/src/layout/: MainLayout.vue
electron-app/src/router/: index.ts
electron-app/src/stores/: auth.ts  chat.ts  novel.ts  settings.ts
electron-app/src/types/: index.ts
electron-app/src/utils/: motion.ts
electron-app/src/views/: BinaryWorkbenchView.vue  ChatView.vue  DllAnalysisView.vue  HexView.vue  HistoryView.vue  HomeView.vue  LoginView.vue  NovelWorkspaceView.vue  RegisterView.vue  SettingsView.vue  StringsView.vue
spring-server/: deploy.sh  pom.xml
spring-server/src/main/java/com/jvxi/unity/: UnityApplication.java
spring-server/src/main/java/com/jvxi/unity/config/: WebConfig.java  WebSocketConfig.java
spring-server/src/main/java/com/jvxi/unity/controller/: AnalysisController.java  AnalysisRecordController.java  AuthController.java  (+5 more)
spring-server/src/main/resources/: application.yml
spring-server/src/main/resources/templates/email/: reset-password.html  verification-code.html
(+188 files in other folders)
